terraform/tf-development/sg.tf

# Cluster Security Groups
resource "aws_security_group" "eks_cluster" {
  name        = "eks-cluster"
  description = "Security Group for Control Plane"
  vpc_id      = aws_vpc.main.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-eks-cluster"
  }
}

resource "aws_security_group_rule" "eks_cluster_ingress_https" {
  description              = "Allow Inbound HTTPS Traffic to Control Plane"
  from_port                = 0
  protocol                 = "-1"
  security_group_id        = aws_security_group.eks_cluster.id
  source_security_group_id = aws_security_group.eks_cluster.id
  to_port                  = 0
  type                     = "ingress"
}

# Node Security Groups
resource "aws_security_group" "eks_node" {
  name        = "eks-node"
  description = "Security Group for Worker Nodes"
  vpc_id      = aws_vpc.main.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-eks-node"
  }
}

resource "aws_security_group_rule" "eks_node_ingress_self" {
  description              = "Allow worker nodes to communicate with each other"
  from_port                = 0
  protocol                 = "-1"
  security_group_id        = aws_security_group.eks_node.id
  source_security_group_id = aws_security_group.eks_node.id
  to_port                  = 65535
  type                     = "ingress"
}

resource "aws_security_group_rule" "eks_node_ingress_cluster" {
  description              = "Allow nodes to receive inbound traffic from Control Plane"
  from_port                = 1025
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_node.id
  source_security_group_id = aws_security_group.eks_cluster.id
  to_port                  = 65535
  type                     = "ingress"
}

resource "aws_security_group_rule" "eks_node_ingress_https" {
  description              = "Allow Control Plane to receive traffic from Nodes"
  from_port                = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_cluster.id
  source_security_group_id = aws_security_group.eks_node.id
  to_port                  = 443
  type                     = "ingress"
}
